--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "start": "nodemon server/server.js"
+    "start": "node server/server.js"
+  },
+  "engines": {
+    "node": "8.4.0"
   },
   "author": "",
   "license": "ISC",
