--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "mocha server/**/*.test.js",
     "start": "node server/server.js"
   },
+  "engines":{
+    "node": "8.4.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
