--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "{src,test}/*.js"
   },
   "scripts": {
-    "test": "mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --exit server/**/*.test.js ",
     "start": "node server/server.js"
   },
   "engines":{
