--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --exit server/**/*.test.js ",
     "start": "node server/server.js"
   },
-  "engines":{
+  "engines": {
     "node": "8.4.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
